crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__detail__render_snapshots__dashboard_ui_detail_audit_populated.snap
---
source: crates/clx/src/dashboard/ui/detail.rs
expression: rendered
---
┌ Session Detail: 23456789 ────────────────────────────────────────────────────────────────────────┐
│ Info • Commands • Audit • Snapshots                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Events (3) ──────────────────────────────────────────────────────────────────────────────────────↑
│  Time       Type           Tool           Details                                                █
│                                                                                                  █
│→ 22:13:30   tool_use       Bash           ls -la                                                 █
│  22:13:31   tool_result    Bash           output line                                            █
│  22:13:45   message        -              prompt text                                            █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  ║
│                                                                                                  ║
└──────────────────────────────────────────────────────────────────────────────────────────────────↓
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│Event: tool_use (Bash)                                                                            │
│Time: 2023-11-14T22:13:30Z                                                                        │
│                                                                                                  │
│Input:                                                                                            │
│ls -la                                                                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab:switch  j/k:select  PgUp/Dn  g/G:top/bottom  r:refresh  Esc:back  1-4:tab
