crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__detail__render_snapshots__dashboard_ui_detail_commands_empty.snap
---
source: crates/clx/src/dashboard/ui/detail.rs
expression: rendered
---
┌ Session Detail: 23456789 ────────────────────────────────────────────────────────────────────────┐
│ Info • Commands • Audit • Snapshots                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands (0) ────────────────────────────────────────────────────────────────────────────────────┐
│Time       Decision   Risk   Layer        Command                                                 │
│                                                                                                  │
│No command                                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│Select a row to view details                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab:switch  j/k:select  PgUp/Dn  g/G:top/bottom  r:refresh  Esc:back  1-4:tab
