crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__detail__render_snapshots__dashboard_ui_detail_info_empty.snap
---
source: crates/clx/src/dashboard/ui/detail.rs
expression: rendered
---
┌ Session Detail: 23456789 ────────────────────────────────────────────────────────────────────────┐
│ Info • Commands • Audit • Snapshots                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Info ────────────────────────────────────────────────────────────────────────────────────────────┐
│  Session:  abcdef0123456789                                                                      │
│  Project:  /home/user/project                                                                    │
│  Status:   ended                    Started: 2023-11-14 22:13:20                                 │
│  Source:   startup                  Ended:   2023-11-14 22:18:20                                 │
│  Duration: 5m                                                                                    │
│                                                                                                  │
│  Tokens                  Commands                 Risk                                           │
│  Input:  1.2K              Total:    0                Low (1-3):  0                              │
│  Output: 800               Allowed:  0    (0%)    Med (4-7):  0                                  │
│  Total:  2.0K              Blocked:  0    (0%)    High (8-10): 0                                 │
│  Cost:   $0.02              Prompted: 0    (0%)                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands (0) ────────────────────────────────────────────────────────────────────────────────────┐
│Time       Decision   Risk   Layer        Command                                                 │
│                                                                                                  │
│No command                                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab:switch  j/k:scroll  r:refresh  Esc:back  1-4:tab
