crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__detail__render_snapshots__dashboard_ui_detail_loading_no_data.snap
---
source: crates/clx/src/dashboard/ui/detail.rs
expression: rendered
---
┌ Session Detail: 23456789 ────────────────────────────────────────────────────────────────────────┐
│ Info • Commands • Audit • Snapshots                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Session Detail ──────────────────────────────────────────────────────────────────────────────────┐
│Loading session data...                                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab:switch  j/k:scroll  r:refresh  Esc:back  1-4:tab
