crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__detail__render_snapshots__dashboard_ui_detail_snapshots_populated.snap
---
source: crates/clx/src/dashboard/ui/detail.rs
expression: rendered
---
┌ Session Detail: 23456789 ────────────────────────────────────────────────────────────────────────┐
│ Info • Commands • Audit • Snapshots                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Snapshots (2) ───────────────────────────────────────────────────────────────────────────────────↑
│  #    Created        Trigger            Tokens (in/out)    Messages                              █
│                                                                                                  █
│→ 1    11-14 22:15    auto               1.2K/800           8                                     █
│  2    11-14 22:16    manual             1.2K/800           8                                     █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  ║
└──────────────────────────────────────────────────────────────────────────────────────────────────↓
┌ Snapshot Detail ─────────────────────────────────────────────────────────────────────────────────┐
│Snapshot #1 — auto (2023-11-14 22:15)                                                             │
│                                                                                                  │
│Summary:                                                                                          │
│  Worked on test coverage.                                                                        │
│                                                                                                  │
│Key Facts:                                                                                        │
│  Tests added                                                                                     │
│                                                                                                  │
│TODOs:                                                                                            │
│  Run cargo test                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab:switch  j/k:select  PgUp/Dn  g/G:top/bottom  r:refresh  Esc:back  1-4:tab
